<resources>
    <string name="app_name">HolidayCalendar2022</string>
    <string name="janyary">Janyary</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="sunday">Sunday</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_31">31</string>
    <string name="_30">30</string>
    <string name="_1_jun">New Year`s Day, also simply called New Year or New Year`s, is observed on 1 January, the first day of the year in the modern Gregorian calendar as well as the Julian calendar. Whilst most solar calendars (like the Gregorian and Julian) begin the year regularly at or near the northern winter solstice, the start of the new year in cultures that observe a lunisolar or lunar calendar (such as the Chinese New Year and the Islamic New Year) happen at less fixed points relative to the solar year. In pre-Christian Rome under the Julian calendar, the day was dedicated to Janus, god of gateways and beginnings, for whom January is also named. From Roman times until the middle of the eighteenth century, the new year was celebrated at various stages and in various parts of Christian Europe on 25 December, on 1 March, on 25 March and on the movable feast of Easter. In the present day, with most countries now using the Gregorian calendar as their civil calendar, 1 January according to that calendar is among the most celebrated public holidays in the world, often observed with fireworks at the stroke of midnight as the new year starts in each time zone. Other global New Year`s Day traditions include making New Year`s resolutions and calling one`s friends and family.</string>
    <string name="exit">EXIT</string>
    <string name="new_year_s_day">New Year\'s Day</string>
    <string name="task">task</string>
    <string name="create_button">Create button</string>
    <string name="create_task">Create_task</string>
    <string name="martin_luther_king_jr_day">Martin Luther King Jr. Day</string>
    <string name="jan_17">Martin Luther King Jr. Day is a federal holiday in the United States marking the birthday of Martin Luther King Jr.. It is observed on the third Monday of January each year. Born in 1929, King\'s actual birthday is January 15 (which in 1929 fell on a Tuesday). The holiday is similar to holidays set under the Uniform Monday Holiday Act. The earliest Monday for this holiday is January 15 and the latest is January 21. King was the chief spokesperson for nonviolent activism in the Civil Rights Movement, which protested racial discrimination in federal and state law. The campaign for a federal holiday in King\'s honor began soon after his assassination in 1968. President Ronald Reagan signed the holiday into law in 1983, and it was first observed three years later. At first, some states resisted observing the holiday as such, giving it alternative names or combining it with other holidays. It was officially observed in all 50 states for the first time in 2000.</string>
    <string name="president_s_day">President\'s Day</string>
    <string name="_feb_21">Presidents’ Day, officially Washington’s Birthday, in the United States, holiday (third Monday in February) popularly recognized as honouring George Washington and Abraham Lincoln. The day is sometimes understood as a celebration of the birthdays and lives of all U.S. presidents. Presidents\' Day is celebrated Monday, February 21, 2022. The origin of Presidents’ Day lies in the 1880s, when the birthday of Washington—commander of the Continental Army during the American Revolution and the first president of the United States—was first celebrated as a federal holiday. In 1968 Congress passed the Uniform Monday Holiday Bill, which moved a number of federal holidays to Mondays. The change was designed to schedule certain holidays so that workers had a number of long weekends throughout the year, but it has been opposed by those who believe that those holidays should be celebrated on the dates they actually commemorate. During debate on the bill, it was proposed that Washington’s Birthday be renamed Presidents’ Day to honour the birthdays of both Washington (February 22) and Lincoln (February 12); although Lincoln’s birthday was celebrated in many states, it was never an official federal holiday. Following much discussion, Congress rejected the name change. After the bill went into effect in 1971, however, Presidents’ Day became the commonly accepted name, due in part to retailers’ use of that name to promote sales and the holiday’s proximity to Lincoln’s birthday. Presidents’ Day is usually marked by public ceremonies in Washington, D.C., and throughout the country.</string>
    <string name="memorial_day">Memorial Day</string>
    <string name="may_30">Memorial Day, originally called Decoration Day, is a day of remembrance for those who have died in military service for the United States. In 2012, the New York Times reported that as many as 25 different places claimed to have begun Memorial Day. In 1966 President Lyndon Johnson officially declared Waterloo N.Y. as the birthplace of Memorial Day, where the village held an event on May 5th 1866. It is known that other informal observations took place before that, such as on May 1st 1865 (two weeks before the end of the Civil War), newly freed slaves in Charleston, South Carolina, held a ceremony reburying fallen Union soldiers with a proper burial. While there is some dispute as to the origin of the day, the first Decoration Day was observed on May 30th 1868, under proclamation by General John A. Logan, national commander of the Grand Army of the Republic. The first official observation involved placing flowers on the graves of Union and Confederate soldiers at Arlington National Cemetery with Pre-President James Garfield delivering a speech. Some believe General Logan planned the first Decoration Day for May 30th, because both Northern and Southern states would have flowers in bloom by then, though others say the date was chosen because it didn’t coincide with the anniversary of any battles. In 1868, about 5,000 people decorated graves at Arlington National Cemetery’s first Memorial Day ceremony. About the same number of people still gather there annually. By 1890, it was recognized by all of the northern states. The South refused to acknowledge the day, honouring their dead on separate days until after World War I (when the holiday changed from honouring just those who died fighting in the Civil War to honouring Americans who died fighting in any war). Memorial Day was celebrated on May 30th up to 1971 when the National Holiday Act of 1971, designated the last Monday in May to be the Federal holiday. Since the late 1950s, on the Thursday before Memorial Day, the 1,200 soldiers of the 3rd U.S. Infantry place small American flags at each of the more than 260,000 gravestones at Arlington National Cemetery. They then patrol 24 hours a day during the weekend to ensure that each flag remains standing. Since 1998, on the Saturday before the observed day for Memorial Day, the Boys Scouts and Girl Scouts place a candle at each of approximately 15,300 grave sites of soldiers buried at Fredericksburg and Spotsylvania National Military Park. Since 2001, the \'National Moment of Remembrance Act\' has defined 3pm local time on Memorial Day as the National Moment of Remembrance. A number of organizations throughout the country observe this moment, including Amtrak, whose trains blast their whistles, Major League Baseball and NASCAR. Each year, the president requests that all governors of the United States direct the flag to be flown at half-staff until noon on Memorial Day on all buildings, grounds and naval vessels. U.S. citizens are also asked to display the flag at half-staff from their homes before noon.</string>
    <string name="juneteenth">Juneteenth</string>
</resources>