<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/galaxy"
    tools:context=".May">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:text="@string/may"
            android:textColor="@color/green"
            android:textSize="48sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:text="@string/sun"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="60dp"
            android:text="@string/mon"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="110dp"
            android:text="@string/tue"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="160dp"
            android:text="@string/wed"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="210dp"
            android:text="@string/thu"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="260dp"
            android:text="@string/fri"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="80dp"
            android:text="@string/sat"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:onClick="may_1"
            android:text="@string/_1"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="120dp"
            android:onClick="may_2"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="120dp"
            android:text="@string/_3"
            android:onClick="may_3"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="120dp"
            android:text="@string/_4"
            android:onClick="may_4"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="225dp"
            android:layout_marginTop="120dp"
            android:text="@string/_5"
            android:onClick="may_5"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginTop="120dp"
            android:text="@string/_6"
            android:onClick="may_6"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="320dp"
            android:layout_marginTop="120dp"
            android:text="@string/_7"
            android:onClick="may_7"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="170dp"
            android:text="@string/_8"
            android:onClick="may_8"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="170dp"
            android:text="@string/_9"
            android:onClick="may_9"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="170dp"
            android:text="@string/_10"
            android:onClick="may_10"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="170dp"
            android:text="@string/_11"
            android:onClick="may_11"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="225dp"
            android:layout_marginTop="170dp"
            android:text="@string/_12"
            android:onClick="may_12"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginTop="170dp"
            android:text="@string/_13"
            android:onClick="may_13"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="320dp"
            android:layout_marginTop="170dp"
            android:text="@string/_14"
            android:onClick="may_14"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="220dp"
            android:text="@string/_15"
            android:onClick="may_15"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="220dp"
            android:text="@string/_16"
            android:onClick="may_16"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="220dp"
            android:text="@string/_17"
            android:onClick="may_17"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="220dp"
            android:text="@string/_18"
            android:onClick="may_18"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="225dp"
            android:layout_marginTop="220dp"
            android:text="@string/_19"
            android:onClick="may_19"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginTop="220dp"
            android:text="@string/_20"
            android:onClick="may_20"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="320dp"
            android:layout_marginTop="220dp"
            android:text="@string/_21"
            android:onClick="may_21"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="270dp"
            android:text="@string/_22"
            android:onClick="may_22"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="270dp"
            android:text="@string/_23"
            android:onClick="may_23"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="270dp"
            android:text="@string/_24"
            android:onClick="may_24"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="270dp"
            android:text="@string/_25"
            android:onClick="may_25"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="225dp"
            android:layout_marginTop="270dp"
            android:text="@string/_26"
            android:onClick="may_26"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginTop="270dp"
            android:text="@string/_27"
            android:onClick="may_27"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="320dp"
            android:layout_marginTop="270dp"
            android:text="@string/_28"
            android:onClick="may_28"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="320dp"
            android:text="@string/_29"
            android:onClick="may_29"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="320dp"
            android:onClick="may_30"
            android:text="@string/_30"
            android:textColor="@color/green"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="320dp"
            android:text="@string/_31"
            android:onClick="may_31"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>